<resources>
    <string name="app_name">SpaceX</string>
    <string name="rocket_name">rocket name:</string>
    <string name="launch_date">launch date:</string>
    <string name="details">details:</string>
    <string name="article">article</string>
    <string name="flight_number">flight number:</string>
    <string name="error">something went wrong</string>
    <string name="try_again">try again</string>
    <string name="no_info">no info</string>
    <string name="dragon_name">dragon name:</string>
    <string name="dragon_type">dragon type:</string>
    <string name="dragon_active">dragon active:</string>
    <string name="description">description:</string>
    <string name="wiki_button">open wikipedia</string>
    <string name="first_flight">first flight:</string>
    <string name="is_active">active:</string>
    <string name="stages">stages:</string>
    <string name="height">height:</string>
    <string name="diameter">diameter:</string>
    <string name="mass">mass</string>
    <string name="meters_feet">%.2f meters %.2f feet</string>
    <string name="kg_lb">%d kg %d lb</string>
    <string name="upcoming">upcoming</string>
    <string name="past">past</string>
    <string name="dragons">dragons</string>
    <string name="rockets">rockets</string>
    <string name="date_time_before_launch">%d days %s</string>
    <string name="youtube">video</string>
    <string name="mission_name">mission name:</string>
</resources>
