<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp">

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/rocket_name" />

            <TextView
                android:id="@+id/rocket_name_text_view"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                tools:text="some rocket name" />

            <ImageView
                android:id="@+id/mission_patch_image_view"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/nyan_cat"
                android:tag="nyan cat" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/launch_date" />

            <TextView
                android:id="@+id/launch_date_text_view"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                tools:text="some launch date unix" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/details" />

            <TextView
                android:id="@+id/detail_text_view"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                tools:text="some details" />
        </TableRow>

    </TableLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/table_layout"
        android:background="@color/colorPrimary" />
</RelativeLayout>