<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:background="@color/black"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="40dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimaryLight"
        app:cardElevation="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inner_layout"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/mission_patch_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/nyan_cat"
                android:tag="nyan cat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/launch_date_text_view"
                android:maxHeight="200dp"
                android:maxWidth="200dp"
                tools:layout_height="100dp"
                tools:layout_width="200dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:padding="4dp"
                android:text="@string/rocket_name"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/rocket_name_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rocket_name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:maxLines="1"
                android:layout_marginEnd="8dp"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                tools:text="some rocket name" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="12sp"
                android:padding="4dp"
                android:text="@string/mission_name"
                app:layout_constraintEnd_toStartOf="@+id/mission_name_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/mission_name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="12sp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/white"
                android:maxLines="1"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                tools:text="some mission name" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="4dp"
                android:text="@string/flight_number"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/flight_number_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/flight_number_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:layout_marginEnd="8dp"
                android:maxLines="1"
                android:textSize="12sp"
                android:textColor="@color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                tools:text="some flight number" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/launch_date"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/launch_date_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/launch_date_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="italic"
                android:maxLines="1"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                tools:text="some launch date" />

            <TextView
                android:id="@+id/detail_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="22dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mission_patch_image_view"
                tools:text="some details" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/article_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/wiki_iv_rect"
        android:src="@drawable/ic_wiki"
        android:text="@string/article"
        android:layout_marginTop="22dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/youtube_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView" />

    <ImageButton
        android:id="@+id/youtube_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="22dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:background="@drawable/youtube_iv_rect"
        android:src="@drawable/ic_ondemand_video_white_36dp"
        android:text="@string/youtube"
        android:textAllCaps="false"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/reddit_campaign_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/article_button"
        app:layout_constraintTop_toBottomOf="@id/cardView" />

    <ImageButton
        android:id="@+id/reddit_campaign_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="22dp"
        android:background="@drawable/reddit_iv_rect"
        android:visibility="gone"
        tools:visibility="visible"
        android:src="@drawable/ic_reddit"
        android:text="@string/youtube"
        android:textAllCaps="false"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/reddit_launch_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/youtube_button"
        app:layout_constraintTop_toBottomOf="@id/cardView" />

    <ImageButton
        android:id="@+id/reddit_launch_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center_vertical"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginTop="22dp"
        android:background="@drawable/reddit_iv_rect"
        android:src="@drawable/ic_reddit2"
        android:text="@string/youtube"
        android:textAllCaps="false"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/reddit_campaign_button"
        app:layout_constraintTop_toBottomOf="@id/cardView" />

    <View
        android:id="@+id/bottom_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/article_button"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="0dp"
        android:layout_height="72dp" />

</androidx.constraintlayout.widget.ConstraintLayout>